5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_1802.log
== TEST (2019-03-31 13:44:33) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano=(sqrt(5.d1)+pi**d2/3)
print(vida)
print(dano)
-- ERROR:
File "XXXX", line 5
    dano=(sqrt(5.d1)+pi**d2/3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:45:14) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = (sqrt(5.d1) + pi**d2/3)
print(vida)
print(dano)
-- ERROR:
File "XXXX", line 5
    dano = (sqrt(5.d1) + pi**d2/3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:48:17) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = (sqrt(5.d1) + pi**d2/3)
print(vida - dano)
-- ERROR:
File "XXXX", line 5
    dano = (sqrt(5.d1) + pi**d2/3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:48:40) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = (sqrt(5.d1) + pi**d2)
print(vida - dano)
-- ERROR:
File "XXXX", line 5
    dano = (sqrt(5.d1) + pi**d2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:49:35) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- OUTPUT:
67.3300258471196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:49:52) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- EXECUTION TIME:
0.152962
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
67.3300258471196
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-259.19289798717557
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
48.9528024488034
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:51:30) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- OUTPUT:
67.3300258471196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:51:38) 
-- CODE:
from math import *
vida = 100
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- EXECUTION TIME:
0.144703
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
67.3300258471196
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-259.19289798717557
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
48.9528024488034
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:14) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:53:28) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = sqrt(5*d1) + pi**d2/3
print(vida - dano)
-- EXECUTION TIME:
0.187262
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.69913250260117
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.94029010015305
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:54:48) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = ( sqrt(5*d1) + pi**d2/3 )
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:55:25) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = ( sqrt(5*d1) + int(pi**d2/3 ))
print(vida - dano)
-- OUTPUT:
-122.23606797749977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:55:53) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + (pi**d2/3 ))
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:56:18) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi **d2/3))
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:56:26) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi **d2/3))
print(vida - dano)
-- EXECUTION TIME:
0.273794
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:56:35) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi **d2/3))
print(dano)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:01:16) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print(vida-dano)
-- ERROR:
File "XXXX", line 6
    print(vida-dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:01:31) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print(vida - dano)
-- ERROR:
File "XXXX", line 6
    print(vida - dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:01:58) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print(dano)
-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:14) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print( vida - dano )
-- ERROR:
File "XXXX", line 6
    print( vida - dano )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:46) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print( dano )
-- ERROR:
File "XXXX", line 6
    print( dano )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:03:01) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
print  ( dano )
-- ERROR:
File "XXXX", line 6
    print  ( dano )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:03:09) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3))
-- ERROR:
File "XXXX", line 6
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:58:59) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3)))
print(vida-dano)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:59:13) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3)))
print(vida-dano)
-- EXECUTION TIME:
0.214987
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:10:45) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( srt(5*d1) + ( pi**(d2/3)))
print(vida-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = int( srt(5*d1) + ( pi**(d2/3)))
NameError: name 'srt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:11:16) 
-- CODE:
from math import *
vida = int(input("vida:"))
d1 = int(input("d1:"))
d2 = int(input("d2:"))
dano = int( sqrt(5*d1) + ( pi**(d2/3)))
print(vida-dano)
-- EXECUTION TIME:
0.151732
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
